example/tests/snapshots/comprehensive_snapshots__words__error_number.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"123\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 3,
            end: 3,
        },
    ],
)
