example/tests/snapshots/comprehensive_snapshots__words__keyword_and_word.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"if hello\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 5,
            end: 5,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 6,
            end: 6,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 7,
            end: 7,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 8,
            end: 8,
        },
    ],
)
