example/tests/snapshots/comprehensive_snapshots__words__keyword_only.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"if\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 2,
            end: 2,
        },
    ],
)
