example/tests/snapshots/comprehensive_snapshots__words__word_with_underscores.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"if hello_world\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 5,
            end: 5,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 6,
            end: 6,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 7,
            end: 7,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 8,
            end: 8,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 9,
            end: 9,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 10,
            end: 10,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 11,
            end: 11,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 12,
            end: 12,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 13,
            end: 13,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 14,
            end: 14,
        },
    ],
)
